--- a/notebooks/Fig 1 Cosine contours.ipynb
+++ b/notebooks/Fig 1 Cosine contours.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c948f6c0",
+   "id": "a50c7670",
    "metadata": {},
    "source": [
     "# Figure 1: Cosine contours"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "92355751",
+   "id": "66f9f575",
    "metadata": {
     "tags": []
    },
@@ -31,20 +31,17 @@
     "\n",
     "import sys\n",
     "sys.path.append('../')\n",
-    "from helpers import cm2inch, title\n",
-    "\n",
-    "# sys.path.append('../../')\n",
-    "# import melodic_contour\n",
-    "\n",
-    "# sys.path.append('../../contour-typology/')\n",
-    "# from src import extract_phrases_from_file"
+    "from helpers import cm2inch, title"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5ce73995",
+   "id": "f5d091c1",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -210,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b60a66cb",
+   "id": "d8dd12ff",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dc72bf04",
+   "id": "16e9a68a",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3465fa2c",
+   "id": "e003eb0e",
    "metadata": {},
    "source": [
     "### DCT"
@@ -298,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7ea998b0",
+   "id": "30ecf798",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ed6746bf",
+   "id": "e88dea5c",
    "metadata": {
     "tags": []
    },
@@ -376,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9ba5802e",
+   "id": "7d857f6d",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a7d64a3",
+   "id": "262440d5",
    "metadata": {
     "tags": []
    },
@@ -453,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b84985e7",
+   "id": "107b603f",
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff0712e8",
+   "id": "962e9bb7",
    "metadata": {},
    "source": [
     "## Combine all figures"
@@ -520,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b23ec521",
+   "id": "246d173c",
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5999affc",
+   "id": "1b295487",
    "metadata": {},
    "outputs": [],
    "source": []
