--- a/notebooks/Fig 6 Mode classification.ipynb
+++ b/notebooks/Fig 6 Mode classification.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0507466c",
+   "id": "0b77f5a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0ca5f5ac",
+   "id": "f48c6ac8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2a4edc8d",
+   "id": "66f6d6aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2a255c21",
+   "id": "aae2cef2",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8da64926",
+   "id": "8229ac82",
    "metadata": {
     "tags": []
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0be0826",
+   "id": "8116247f",
    "metadata": {},
    "source": [
     "The pca and cosine projections are strongly correlated"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "aab17fbf",
+   "id": "52dcc1dd",
    "metadata": {
     "tags": []
    },
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e010592b",
+   "id": "9eb0ea30",
    "metadata": {
     "tags": []
    },
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b58feefa",
+   "id": "788e799f",
    "metadata": {
     "tags": []
    },
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d88eac1",
+   "id": "4ce25c1e",
    "metadata": {
     "tags": []
    },
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "02d42edb",
+   "id": "658866e3",
    "metadata": {
     "tags": []
    },
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51a68c4c",
+   "id": "d0c7f52f",
    "metadata": {
     "tags": []
    },
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ef5e6ce8",
+   "id": "3ba318fd",
    "metadata": {
     "tags": []
    },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c90def54",
+   "id": "e0754154",
    "metadata": {
     "tags": []
    },
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "00314274",
+   "id": "8668055b",
    "metadata": {
     "tags": []
    },
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "952682a5",
+   "id": "f95fcb32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,13 +413,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "28a918d3",
+   "id": "5b923fb7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x125a73c90>]"
+       "[<matplotlib.lines.Line2D at 0x128e42910>]"
       ]
      },
      "execution_count": 11,
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9471003a",
+   "id": "cfad7100",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de2fb3fb",
+   "id": "cccc864d",
    "metadata": {
     "tags": []
    },
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "dec01568",
+   "id": "8bf2fde4",
    "metadata": {
     "tags": []
    },
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ad2f513",
+   "id": "9d1c9820",
    "metadata": {
     "tags": []
    },
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "063b0298",
+   "id": "503b21f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,8 +622,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "5c219f7e",
+   "execution_count": 15,
+   "id": "7879dbf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "bf935880",
+   "id": "febd552f",
    "metadata": {
     "tags": []
    },
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26c53468",
+   "id": "25590ca3",
    "metadata": {},
    "source": [
     "## Analysis"
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "6d824241",
+   "id": "557cc7ef",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "7883b90a",
+   "id": "e24b3d16",
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "6025a9d9",
+   "id": "7697a5b8",
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "b1341c16",
+   "id": "d5224e8c",
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "132ea65d",
+   "id": "72cbe126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,7 +1235,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "c8ead937",
+   "id": "ca2f5b93",
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff5d4e2e",
+   "id": "81255c7a",
    "metadata": {},
    "source": [
     "## Example chant"
@@ -1278,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "fbabe625",
+   "id": "d2e308eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1288,7 +1288,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d02cde34",
+   "id": "378a174f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1299,7 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "daa3e1a0",
+   "id": "266889ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1312,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "16b05852",
+   "id": "8edd1105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1323,7 +1323,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "5dc235a7",
+   "id": "6a124b6b",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -1409,7 +1409,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "e3e3f10a",
+   "id": "72388f5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1425,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "0b1300a1",
+   "id": "ece5c818",
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e85197fe",
+   "id": "00e72378",
    "metadata": {},
    "source": [
     "## Neumes"
@@ -1490,7 +1490,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "8cdc7a44",
+   "id": "cd56215c",
    "metadata": {},
    "outputs": [
     {
@@ -1537,7 +1537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e736ecd",
+   "id": "e640c97d",
    "metadata": {},
    "source": [
     "## Score"
@@ -1546,7 +1546,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "03ef91b7",
+   "id": "367794fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "8954456b",
+   "id": "f3aebdfa",
    "metadata": {},
    "outputs": [
     {
@@ -2050,7 +2050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3785e978",
+   "id": "2f49c955",
    "metadata": {},
    "outputs": [],
    "source": []
